# g4music

./: README.md  a.txt  com.github.neithern.g4music.json  g4music.doap  meson.build  sv.po
data/: app.appdata.xml.in  app.desktop.in  app.gschema.xml  app.metainfo.xml.in  app.service.in  com.github.neithern.g4music.appdata.xml.in  com.github.neithern.g4music.desktop.in  com.github.neithern.g4music.gschema.xml  meson.build
data/icons/: meson.build
flatpak/: com.github.neithern.g4music.json
pkgs/flatpak/: com.github.neithern.g4music.json
po/: LINGUAS  POTFILES  POTFILES.in  UPDATE.md  be.po  bg.po  cs.po  da.po  de.po  el.po  es.po  et.po  eu.po  fa.po  fi.po  fr.po  g4music.pot  he.po  hi.po  hu.po  ia.po  id.po  it.po  ja.po  ka.po  meson.build  nl.po  oc.po  pl.po  pt_BR.po  pt_br.po  ro.po  ru.po  sk.po  sl.po  sr.po  sv.po  template.pot  tr.po  uk.po  (+2 more)
src/: action-handles.vala  application.vala  async-task.vala  config.vapi  data-io.vala  dir-cache.vala  g4music.gresource.xml  glib-ext.vapi  gresource.xml  gst-ext.vapi  gst-level.c  gst-player.vala  gst-tag.h  gst-tag.vapi  main.vala  meson.build  mini-bar.vala  mpris.vala  music.vala  paintables.vala  peak-bar.vala  play-bar.vala  portal.vala  preferences.vala  song-entry.vala  song-store.vala  song.vala  tag-cache.vala  tag-parser.vala  thumbnailer.vala  window.vala
src/gst/: ape-demux.c  gst-ext.h  gst-ext.vapi  gst-player.vala  peak-calculator.vala  tag-parser.vala
src/gtk/: help-overlay.ui  play-panel.ui  playlist-dialog.ui  preferences.ui  store-panel.ui  style.css  window.ui
src/ui/: dialogs.vala  leaflet.vala  library-page.vala  lyrics-sheet.vala  mini-bar.vala  music-entry.vala  music-list.vala  music-widgets.vala  narrow-bar.vala  paintables.vala  peak-bar.vala  play-bar.vala  play-panel.vala  playlist-dialog.vala  preferences.vala  queue-sheet.vala  sleep-timer.vala  stable-label.vala  store-panel.vala  switch-bar.vala  taglist-dialog.vala  volume-button.vala  window.vala
src/utils/: async-task.vala  cover-cache.vala  data-io.vala  dir-cache.vala  dir-monitor.vala  mpris.vala  music-library.vala  music-loader.vala  music-store.vala  music.vala  playlist-file.vala  portal.vala  tag-cache.vala  thumbnailer.vala
